--- a/files/2_tp_semestre1/1_dictionnaire.ipynb
+++ b/files/2_tp_semestre1/1_dictionnaire.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dictionnaire et recherche séquentielle [![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dtree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
+    "# Dictionnaire et recherche séquentielle [(Binder)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dtree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
     "\n",
     "## Recherche séquentielle dans une liste"
    ]
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:56.956092Z",
-     "iopub.status.busy": "2021-11-16T17:48:56.952235Z",
-     "iopub.status.idle": "2021-11-16T17:48:56.969473Z",
-     "shell.execute_reply": "2021-11-16T17:48:56.969981Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.227280Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.226789Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.237182Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.236789Z"
     },
     "tags": [
      "cor"
@@ -100,10 +100,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:56.974475Z",
-     "iopub.status.busy": "2021-11-16T17:48:56.972726Z",
-     "iopub.status.idle": "2021-11-16T17:48:56.976294Z",
-     "shell.execute_reply": "2021-11-16T17:48:56.976759Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.240067Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.239685Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.242272Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.241965Z"
     }
    },
    "outputs": [],
@@ -123,10 +123,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:56.982318Z",
-     "iopub.status.busy": "2021-11-16T17:48:56.979045Z",
-     "iopub.status.idle": "2021-11-16T17:48:56.992428Z",
-     "shell.execute_reply": "2021-11-16T17:48:56.991726Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.245838Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.245439Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.247403Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.247720Z"
     }
    },
    "outputs": [
@@ -157,10 +157,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:56.996502Z",
-     "iopub.status.busy": "2021-11-16T17:48:56.995046Z",
-     "iopub.status.idle": "2021-11-16T17:48:56.998736Z",
-     "shell.execute_reply": "2021-11-16T17:48:56.998258Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.250450Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.250050Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.251752Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.251427Z"
     }
    },
    "outputs": [],
@@ -180,10 +180,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:57.003735Z",
-     "iopub.status.busy": "2021-11-16T17:48:57.001261Z",
-     "iopub.status.idle": "2021-11-16T17:48:57.008174Z",
-     "shell.execute_reply": "2021-11-16T17:48:57.007540Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.255133Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.254737Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.256497Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.256802Z"
     }
    },
    "outputs": [
@@ -214,10 +214,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:57.013985Z",
-     "iopub.status.busy": "2021-11-16T17:48:57.012824Z",
-     "iopub.status.idle": "2021-11-16T17:48:57.016430Z",
-     "shell.execute_reply": "2021-11-16T17:48:57.015909Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.260092Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.259711Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.261468Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.261777Z"
     }
    },
    "outputs": [
@@ -248,10 +248,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:57.021376Z",
-     "iopub.status.busy": "2021-11-16T17:48:57.018787Z",
-     "iopub.status.idle": "2021-11-16T17:48:57.024050Z",
-     "shell.execute_reply": "2021-11-16T17:48:57.024528Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.265707Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.264907Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.267036Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.266701Z"
     }
    },
    "outputs": [
@@ -282,10 +282,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:57.028430Z",
-     "iopub.status.busy": "2021-11-16T17:48:57.026853Z",
-     "iopub.status.idle": "2021-11-16T17:48:57.030169Z",
-     "shell.execute_reply": "2021-11-16T17:48:57.030615Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.270103Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.269453Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.271175Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.270782Z"
     }
    },
    "outputs": [],
@@ -312,10 +312,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:57.036998Z",
-     "iopub.status.busy": "2021-11-16T17:48:57.036275Z",
-     "iopub.status.idle": "2021-11-16T17:48:57.039388Z",
-     "shell.execute_reply": "2021-11-16T17:48:57.039869Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.275204Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.273683Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.277116Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.277420Z"
     },
     "tags": [
      "cor"
@@ -376,10 +376,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:48:57.048587Z",
-     "iopub.status.busy": "2021-11-16T17:48:57.045499Z",
-     "iopub.status.idle": "2021-11-16T17:48:57.052225Z",
-     "shell.execute_reply": "2021-11-16T17:48:57.051689Z"
+     "iopub.execute_input": "2021-11-16T17:56:50.279463Z",
+     "iopub.status.busy": "2021-11-16T17:56:50.279066Z",
+     "iopub.status.idle": "2021-11-16T17:56:50.284918Z",
+     "shell.execute_reply": "2021-11-16T17:56:50.284589Z"
     },
     "tags": [
      "cor"
