Update launch button

--- a/files/2_tp_semestre1/1_dictionnaire.ipynb
+++ b/files/2_tp_semestre1/1_dictionnaire.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Dictionnaire et recherche séquentielle [(Binder)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dtree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
+    "# [Dictionnaire et recherche séquentielle ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dtree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
     "\n",
     "## Recherche séquentielle dans une liste"
    ]
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.227280Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.226789Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.237182Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.236789Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.294657Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.294176Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.310859Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.311212Z"
     },
     "tags": [
      "cor"
@@ -100,10 +100,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.240067Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.239685Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.242272Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.241965Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.314577Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.314132Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.317028Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.316683Z"
     }
    },
    "outputs": [],
@@ -123,10 +123,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.245838Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.245439Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.247403Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.247720Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.320859Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.320425Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.322593Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.322926Z"
     }
    },
    "outputs": [
@@ -157,10 +157,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.250450Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.250050Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.251752Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.251427Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.326439Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.325661Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.327078Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.327415Z"
     }
    },
    "outputs": [],
@@ -180,10 +180,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.255133Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.254737Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.256497Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.256802Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.330540Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.330117Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.335124Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.334733Z"
     }
    },
    "outputs": [
@@ -214,10 +214,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.260092Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.259711Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.261468Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.261777Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.338547Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.338123Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.341435Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.341062Z"
     }
    },
    "outputs": [
@@ -248,10 +248,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.265707Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.264907Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.267036Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.266701Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.345752Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.344982Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.347076Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.347416Z"
     }
    },
    "outputs": [
@@ -282,10 +282,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.270103Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.269453Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.271175Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.270782Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.350706Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.350273Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.352181Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.351805Z"
     }
    },
    "outputs": [],
@@ -312,10 +312,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.275204Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.273683Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.277116Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.277420Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.356393Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.355967Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.357966Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.358300Z"
     },
     "tags": [
      "cor"
@@ -376,10 +376,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T17:56:50.279463Z",
-     "iopub.status.busy": "2021-11-16T17:56:50.279066Z",
-     "iopub.status.idle": "2021-11-16T17:56:50.284918Z",
-     "shell.execute_reply": "2021-11-16T17:56:50.284589Z"
+     "iopub.execute_input": "2021-11-16T18:18:05.364305Z",
+     "iopub.status.busy": "2021-11-16T18:18:05.363879Z",
+     "iopub.status.idle": "2021-11-16T18:18:05.367792Z",
+     "shell.execute_reply": "2021-11-16T18:18:05.367416Z"
     },
     "tags": [
      "cor"
