--- a/files/2_tp_semestre1/1_dictionnaire.ipynb
+++ b/files/2_tp_semestre1/1_dictionnaire.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [Dictionnaire et recherche séquentielle ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dtree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
+    "# [Dictionnaire et recherche séquentielle ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F1_dictionnaire.ipynb%26branch%3Dmaster)\n",
     "\n",
     "## Recherche séquentielle dans une liste"
    ]
@@ -27,10 +27,10 @@
    "execution_count": 1,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.294657Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.294176Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.310859Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.311212Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.017237Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.013615Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.030651Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.029937Z"
     },
     "tags": [
      "cor"
@@ -100,10 +100,10 @@
    "execution_count": 2,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.314577Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.314132Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.317028Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.316683Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.035598Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.035052Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.038673Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.038193Z"
     }
    },
    "outputs": [],
@@ -123,10 +123,10 @@
    "execution_count": 3,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.320859Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.320425Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.322593Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.322926Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.044389Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.043773Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.046612Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.047089Z"
     }
    },
    "outputs": [
@@ -157,10 +157,10 @@
    "execution_count": 4,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.326439Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.325661Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.327078Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.327415Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.052099Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.049503Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.055160Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.054402Z"
     }
    },
    "outputs": [],
@@ -180,10 +180,10 @@
    "execution_count": 5,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.330540Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.330117Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.335124Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.334733Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.059368Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.058801Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.062095Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.061589Z"
     }
    },
    "outputs": [
@@ -214,10 +214,10 @@
    "execution_count": 6,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.338547Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.338123Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.341435Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.341062Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.067704Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.066922Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.069788Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.070244Z"
     }
    },
    "outputs": [
@@ -248,10 +248,10 @@
    "execution_count": 7,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.345752Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.344982Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.347076Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.347416Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.074610Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.074026Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.077056Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.076594Z"
     }
    },
    "outputs": [
@@ -282,10 +282,10 @@
    "execution_count": 8,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.350706Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.350273Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.352181Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.351805Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.081063Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.080357Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.083156Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.082633Z"
     }
    },
    "outputs": [],
@@ -312,10 +312,10 @@
    "execution_count": 9,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.356393Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.355967Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.357966Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.358300Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.089490Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.088896Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.092916Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.092444Z"
     },
     "tags": [
      "cor"
@@ -376,10 +376,10 @@
    "execution_count": 10,
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T18:18:05.364305Z",
-     "iopub.status.busy": "2021-11-16T18:18:05.363879Z",
-     "iopub.status.idle": "2021-11-16T18:18:05.367792Z",
-     "shell.execute_reply": "2021-11-16T18:18:05.367416Z"
+     "iopub.execute_input": "2021-11-16T19:36:47.102849Z",
+     "iopub.status.busy": "2021-11-16T19:36:47.100730Z",
+     "iopub.status.idle": "2021-11-16T19:36:47.106011Z",
+     "shell.execute_reply": "2021-11-16T19:36:47.104752Z"
     },
     "tags": [
      "cor"
