--- a/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
+++ b/files/2_tp_semestre1/2_boucles_imbriquees.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# [Boucles imbriquées ![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/fortierq/itc-binder/main?urlpath=git-pull%3Frepo%3Dhttps%253A%252F%252Fgithub.com%252Ffortierq%252Fitc1%26urlpath%3Dlab%252Ftree%252Fitc1%252Ffiles%252F2_tp_semestre1%252F2_boucles_imbriquees.ipynb%26branch%3Dmaster)\n",
     "\n",
-    "Dans ce TP, on considère des algorithmes utilisant des boucles imbriquées (les unes dans les autres). Par exemple, dans le code suivant, `print(i, j)` est exécuté pour tous les `i` entre $0$ et $3$ et tous les `j` entre $0$ et $2$ :"
+    "Dans ce TP, on considère des algorithmes utilisant des boucles imbriquées (les unes dans les autres). Par exemple, dans le code suivant, `print(i, j)` est exécuté pour tous les `i` entre $0$ et $4$ et tous les `j` entre $0$ et $2$ :"
    ]
   },
   {
@@ -16,10 +16,10 @@
    "id": "a2a2cee2-6ffa-44fb-a716-10bad9912836",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:49.355747Z",
-     "iopub.status.busy": "2021-11-16T19:36:49.353012Z",
-     "iopub.status.idle": "2021-11-16T19:36:49.361334Z",
-     "shell.execute_reply": "2021-11-16T19:36:49.360772Z"
+     "iopub.execute_input": "2021-11-21T17:25:21.541215Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.540633Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.544469Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.544928Z"
     }
    },
    "outputs": [
@@ -51,7 +51,11 @@
   {
    "cell_type": "markdown",
    "id": "0d8c4c47-93aa-4850-b866-169a827d18e9",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "exo"
+    ]
+   },
    "source": [
     "**Exercice** : Deviner puis vérifier ce qui va être affiché par le code suivant :\n",
     "```python\n",
@@ -59,6 +63,41 @@
     "    for j in range(i, 3):\n",
     "        print(i, j)\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "f11a6436-dc54-4f51-b7f1-0a84b8959aee",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-21T17:25:21.548753Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.548259Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.551190Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.551564Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "0 1\n",
+      "0 2\n",
+      "1 1\n",
+      "1 2\n",
+      "2 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(4):\n",
+    "    for j in range(i, 3):\n",
+    "        print(i, j)"
    ]
   },
   {
@@ -73,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b2a9c312-70a9-46bd-91c3-6110ff681240",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:49.366385Z",
-     "iopub.status.busy": "2021-11-16T19:36:49.365852Z",
-     "iopub.status.idle": "2021-11-16T19:36:49.369889Z",
-     "shell.execute_reply": "2021-11-16T19:36:49.369449Z"
+     "iopub.execute_input": "2021-11-21T17:25:21.556691Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.555624Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.557964Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.558335Z"
     }
    },
    "outputs": [
@@ -101,14 +140,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "3c72b6ff-e6d3-475f-9dac-a8c3910cb8d3",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2021-11-16T19:36:49.373579Z",
-     "iopub.status.busy": "2021-11-16T19:36:49.373026Z",
-     "iopub.status.idle": "2021-11-16T19:36:49.428791Z",
-     "shell.execute_reply": "2021-11-16T19:36:49.428286Z"
+     "iopub.execute_input": "2021-11-21T17:25:21.561817Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.561338Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.609264Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.608838Z"
     }
    },
    "outputs": [
@@ -119,7 +158,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_184/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/tmp/ipykernel_156/2090828810.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0ms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"L\"\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"!\"\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# ERREUR : on ne peut pas modifier un str\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
      ]
     }
@@ -139,6 +178,30 @@
    },
    "source": [
     "**Exercice** : Écrire une fonction permettant de savoir si une chaîne de caractères contient la lettre a."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "487e7d00-95fd-4eec-beeb-a26c83b9bcfb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-21T17:25:21.613785Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.612658Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.614356Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.614885Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "def contient_a(s):\n",
+    "    for i in range(len(s)):\n",
+    "        if s[i] == \"a\":\n",
+    "            return True\n",
+    "    return False"
    ]
   },
   {
@@ -163,6 +226,42 @@
     "1. Écrire une fonction `facteur_i` telle que `facteur_i(s, m, i)` détermine si `m` apparaît dans `s` à partir de l'indice `i`.  Dit autrement, il faut `s[i]` et `m[0]` soient égaux, que `s[i + 1]` et `m[1]` soient égaux...  \n",
     "Par exemple, `facteur_i(\"Algorithme\", \"go\", 2)` doit renvoyer `True` mais `facteur_i(\"Algorithme\", \"go\", 0)` doit renvoyer `False`.  \n",
     "2. En déduire une fonction `facteur` telle que `facteur(s, m)` détermine si `m` est un facteur de `s`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "5e25690a-df9c-4f30-95a9-cc3ef84b7124",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-21T17:25:21.621744Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.620308Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.622329Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.622762Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# 1.\n",
+    "def facteur_i(s, m, i):\n",
+    "    for j in range(len(m)):\n",
+    "        if s[i + j] != m[j]:\n",
+    "            return False\n",
+    "    return True\n",
+    "\n",
+    "assert(facteur_i(\"Algorithme\", \"go\", 2) and not facteur_i(\"Algorithme\", \"go\", 0))\n",
+    "\n",
+    "# 2.\n",
+    "def facteur(s, m):\n",
+    "    for i in range(len(s) - len(m) + 1):\n",
+    "        if facteur_i(s, m, i):\n",
+    "            return True\n",
+    "    return False\n",
+    "\n",
+    "assert(facteur(\"Algorithme\", \"go\") and not facteur(\"Algorithme\", \"lit\"))"
    ]
   },
   {
@@ -192,10 +291,52 @@
     "    m = abs(L[1] - L[0]) # m contient la distance minimum entre 2 valeurs de L\n",
     "    res = (L[0], L[1]) # les deux valeurs les plus proches\n",
     "    for i in range(len(L)):\n",
-    "        for j in range(len(L)):\n",
+    "        for j in range(..., len(L)): # on veut i différent de j\n",
     "            # si la distance de L[i] à L[j] est plus petite que m, mettre à jour m et res\n",
     "    return res\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "2cd6bbf2-20ff-4ced-aba9-47d84dd21531",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-21T17:25:21.634735Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.629917Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.638069Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.638465Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(4, 2)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def plus_proches(L):\n",
+    "    m = abs(L[1] - L[0]) # m contient la distance minimum entre 2 valeurs de L\n",
+    "    res = (L[0], L[1]) # les deux valeurs les plus proches\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(i + 1, len(L)):\n",
+    "            d = abs(L[i] - L[j])\n",
+    "            if d < m:\n",
+    "                m = d\n",
+    "                res = (L[i], L[j])\n",
+    "    return res\n",
+    "\n",
+    "plus_proches([4, -1, 8, 2, 13])"
    ]
   },
   {
@@ -224,6 +365,45 @@
    },
    "source": [
     "**Exercice** : Traduire ce pseudo-code en une fonction Python."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "31c52c29-8a92-4db2-8d17-7cd87780eabb",
+   "metadata": {
+    "execution": {
+     "iopub.execute_input": "2021-11-21T17:25:21.644448Z",
+     "iopub.status.busy": "2021-11-21T17:25:21.643932Z",
+     "iopub.status.idle": "2021-11-21T17:25:21.646695Z",
+     "shell.execute_reply": "2021-11-21T17:25:21.647113Z"
+    },
+    "tags": [
+     "cor"
+    ]
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3, 4, 8]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def tri_bulle(L):\n",
+    "    for i in range(len(L)):\n",
+    "        for j in range(i + 1, len(L)):\n",
+    "            if L[i] > L[j]:\n",
+    "                L[i], L[j] = L[j], L[i]\n",
+    "          \n",
+    "L = [4, 1, 8, 2, 3]\n",
+    "tri_bulle(L)\n",
+    "L"
    ]
   }
  ],
